--- a/styles/collection-template.css
+++ b/styles/collection-template.css
@@ -294,21 +294,20 @@ header {
 }
 
 .close-detail {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    width: 40px;
-    height: 40px;
-    background-color: white;
-    border: none;
-    border-radius: 50%;
-    color: black;
-    font-size: 30px;
-    line-height: 40px;
-    text-align: center;
-    cursor: pointer;
-    z-index: 2001;
-    padding: 0;
+    position: fixed !important;
+    top: 20px !important;
+    right: 20px !important;
+    width: 40px !important;
+    height: 40px !important;
+    background-color: #fff !important;
+    border-radius: 50% !important;
+    color: #000 !important;
+    font-size: 30px !important;
+    line-height: 35px !important;
+    text-align: center !important;
+    cursor: pointer !important;
+    z-index: 9999 !important;
+    display: block !important;
 }
 
 .close-detail:hover {
