--- a/styles/collection-template.css
+++ b/styles/collection-template.css
@@ -693,13 +693,14 @@ footer {
 }
 
 .social-link {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 40px;
     height: 40px;
-    line-height: 40px;
-    text-align: center;
     border: 1px solid var(--secondary-color);
     transition: var(--transition);
+    font-size: 1.2rem;
 }
 
 .social-link:hover {
