--- a/styles/collection-template.css
+++ b/styles/collection-template.css
@@ -672,9 +672,7 @@ body {
 }
 
 .contact-divider {
-    width: 1px;
-    height: 80px;
-    background-color: rgba(255, 255, 255, 0.3);
+    display: none;
 }
 
 @media screen and (max-width: 768px) {
